[package]
name = "disk_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
clap = { version = "4.4.8", features = ["derive"] }
walkdir = "2.3"
anyhow = "1.0.75"
indicatif = "0.17.7"
humansize = "2.0"
num_cpus = "1.16.0"
thiserror = "1.0.50"
regex = "1.10"
